--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jillur vai video Day-25</title>
-    <!-- BOOTASTARP 5.1.3 CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap-grid.min.css" integrity="sha512-q0LpKnEKG/pAf1qi1SAyX0lCNnrlJDjAvsyaygu07x8OF4CEOpQhBnYiFW6YDUnOOcyAEiEYlV4S9vEc6akTEw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- bootstrap cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,11 +15,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <a href="#"><img src="https://i.ibb.co/SQmNQDn/logo.png" alt=""></a>
+                    <a href="#"><img class="w-50" src="https://i.ibb.co/SQmNQDn/logo.png" alt=""></a>
                 </div>
                 <div class="col-md-8">
                     <div class="menu">
-                        <ul>
+                        <ul class="text-end">
                             <li><a href="#">Home</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Services</a></li>
